# eido-api-core

./: .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml  run_tests.yml
app/: logs.py  main.py  middleware.py  settings.py  utils.py
app/models/: Entity.py  Media.py  MongoModel.py  Notification.py  PDFDocument.py  Patient.py  StripeFulfillment.py  UserPDF.py  __init__.py
app/routers/: __init__.py  auth.py  patients.py  payment_gateway.py  pdf.py
app/routers/admin/: entities_admin.py  user_pdfs_admin.py
app/routers/user/: entities_user.py  user_pdfs.py
app/services/: __init__.py  auth.py  base_service.py  entity_service.py  patient_service.py  pdf_service.py  user_pdfs_service.py
app/tests/: conftest.py  test_auth.py  test_entities.py  test_patients.py  test_user_pdfs.py
app/tests/fixtures/: sample_entities.py  sample_patients.py  sample_user_pdfs.py  sample_users.py
