[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["John C. Kealy <johnckealy.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
stripe = "^9.12.0"
beanie = "^1.26.0"
fastapi = "^0.111.0"
requests = "^2.32.3"
httpx = "^0.27.0"
mongomock = "^4.1.2"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
firebase-admin = "^6.5.0"
cloudinary = "^1.40.0"
pytest-mock = "^3.14.0"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
python-slugify = "^8.0.4"
fastapi-pagination = "^0.12.25"
sendgrid = "^6.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
  "ignore:`general_plain_validator_function`:DeprecationWarning::",
  "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
  "ignore::DeprecationWarning:httpx"
]
